# emerald.ai

./: README.md  compose.yaml
news/: Dockerfile  api.py  pyproject.toml  server.py
news/news/: api.py  server.py
news/scripts/: build.sh  request.sh  start.sh
scripts/: compose-up.sh
